# denox

./: .gitignore  README.md  mix.exs
.github/workflows/: ci.yml
lib/: denox.ex
native/denox/: Cargo.toml  README.md  build.rs
native/denox/.cargo/: config.toml
native/denox/src/: lib.rs
patches/: deno_core-0.341.0.patch
scripts/: apply_patches.sh  extract_v8.sh
test/: denox_test.exs
