[package]
name = "denox"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "denox"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.36.1"
deno_core = { version = "0.341.0", features = [
  "include_js_files_for_snapshotting",
] }
tokio = { version = "1.36", features = ["full"] }

[features]
default = []

[target.'cfg(target_os = "linux")'.dependencies]
v8 = { version = "135.1.0", features = ["shared"] }
