[package]
name = "denox"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "denox"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.36.1"
deno_core = { version = "0.341.0", features = [
  "include_js_files_for_snapshotting",
] }
tokio = { version = "1.36", features = ["full"] }

[features]
default = []

# Build dependencies for all platforms
[build-dependencies]
cc = "1.0"

[patch.crates-io]
deno_core = { version = "0.341.0", path = "../../patches/deno_core-0.341.0" }
