[package]
name = "denox"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "denox"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.36.1"
deno_core = { version = "0.341.0", features = ["include_icu_data"] }
tokio = { version = "1.36", features = ["full"] }
zerofrom = { version = "0.1.4", features = ["derive"] }
v8 = { version = "135.1.0", features = ["use_custom_libcxx"] }

[features]
default = ["v8/use_custom_libcxx"]
